--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "ruff==0.9.1",
+]
+
+[tool.ruff]
+target-version = "py313"
+line-length = 120
