--- a/.github/workflows/generate_labels.yaml
+++ b/.github/workflows/generate_labels.yaml
@@ -18,6 +18,9 @@ jobs:
   labeler:
     name: labeler
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4.2.2
