--- a/.github/workflows/lint_gh_actions.yaml
+++ b/.github/workflows/lint_gh_actions.yaml
@@ -16,6 +16,9 @@ jobs:
   actionlint:
     name: actionlint
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4.2.2
