--- a/.github/workflows/generate_labels.yaml
+++ b/.github/workflows/generate_labels.yaml
@@ -23,7 +23,8 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v4.2.2
+      - name: Checkout the main repository
+        uses: actions/checkout@v4.2.2
 
       - name: Run Labeler
         uses: crazy-max/ghaction-github-labeler@v5.1.0
