--- a/.github/workflows/create_tag.yaml
+++ b/.github/workflows/create_tag.yaml
@@ -15,7 +15,7 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout the main repository
         uses: actions/checkout@v4.2.2
 
       - name: Verify branch name
