--- a/.github/workflows/lint_gh_actions.yaml
+++ b/.github/workflows/lint_gh_actions.yaml
@@ -21,7 +21,8 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v4.2.2
+      - name: Checkout the main repository
+        uses: actions/checkout@v4.2.2
 
       - uses: reviewdog/action-actionlint@v1.62
         with:
