--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,6 +6,9 @@
   "git-submodules": {
     enabled: true,
   },
+  lockFileMaintenance: {
+    enabled: true,
+  },
   labels: [
     "automated",
     "dependencies",
