--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ dependencies = []
 [dependency-groups]
 dev = [
     { include-group = "lint" },
+    "pre-commit>=4.2.0",
 ]
-lint = [ "ruff==0.11.13" ]
+lint = [ "ruff>=0.11.13" ]
 
 [tool.ruff]
 target-version = "py313"
