--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,11 @@
 repos:
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.13
+    hooks:
+      - id: ruff-check
+        args: [ --fix ]
+      - id: ruff-format
+
   - repo: https://github.com/crate-ci/typos
     rev: v1.33.1
     hooks:
