--- a/.github/labels/label-definition.yaml
+++ b/.github/labels/label-definition.yaml
@@ -45,3 +45,7 @@
 - name: "versioning"
   description: "Versioning changes"
   color: "D6D6D6"
+
+- name: "template-sync"
+  description: "Synchronise template repository updates"
+  color: "D6D6D6"
