--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,6 +7,9 @@
   "git-submodules": {
     enabled: true,
   },
+  "pre-commit": {
+    enabled: true,
+  },
   lockFileMaintenance: {
     enabled: true,
   },
