--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,6 +4,18 @@
     "config:recommended",
     "helpers:pinGitHubActionDigests",
   ],
+  packageRules: [
+    {
+      matchCategories: ["ci"],
+      addLabels: ["ci"],
+      // automerge: true,
+    },
+    {
+      matchManagers: ["pre-commit"],
+      addLabels: ["pre-commit"],
+      // automerge: true,
+    }
+  ],
   "git-submodules": {
     enabled: true,
   },
@@ -12,6 +24,7 @@
   },
   lockFileMaintenance: {
     enabled: true,
+    // automerge: true,
   },
   labels: [
     "automated",
