--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = []
 [dependency-groups]
 dev = [
     { include-group = "lint" },
-    "pre-commit>=4.2.0",
+    "prek>=0.3.0",
 ]
 lint = [ "ruff>=0.11.13" ]
 
