--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,7 @@ jobs:
     if: ${{ needs.determine-changes.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
       security-events: write
 
