--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,11 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       src: ${{ steps.changed-files.outputs.src_any_changed }}
-      doc: ${{ steps.changed-files.outputs.doc_any_changed }}
       test: ${{ steps.changed-files.outputs.test_any_changed }}
-      yaml: ${{ steps.changed-files.outputs.yaml_any_changed }}
       workflow: ${{ steps.changed-files.outputs.workflow_any_changed }}
       workflow_ci: ${{ steps.changed-files.outputs.workflow_ci_any_changed }}
+      md: ${{ steps.changed-files.outputs.md_any_changed }}
+      yaml: ${{ steps.changed-files.outputs.yaml_any_changed }}
       python: ${{ steps.changed-files.outputs.python_any_changed }}
 
     steps:
@@ -42,19 +42,20 @@ jobs:
             src:
               - '**/src/**'
               - '!**/src/**/*.md'
-            doc:
-              - '**/*.md'
-              - '**/docs/**'
             test:
               - '**/tests/**'
               - '!**/tests/**/*.md'
-            yaml:
-              - '**/*.yml'
-              - '**/*.yaml'
             workflow:
               - .github/workflows/**
             workflow_ci:
               - .github/workflows/ci.yaml
+            md:
+              - '**/*.md'
+              - .markdownlint-cli2.yaml
+            yaml:
+              - '**/*.yml'
+              - '**/*.yaml'
+              - .yamllint.yaml
             python:
               - '**/**.py'
               - 'pyproject.toml'
@@ -96,6 +97,51 @@ jobs:
         # with:
         #   advanced-security: false  # must be false for private repo
 
+  lint-markdown:
+    name: Lint Markdown
+    needs: determine-changes
+    if: ${{ needs.determine-changes.outputs.md == 'true' || needs.determine-changes.outputs.workflow_ci == 'true' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
+    steps:
+      - name: Checkout the main repository
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          persist-credentials: false
+
+      - name: Lint Markdown
+        if: github.event_name != 'pull_request'
+        run: npx --yes markdownlint-cli2 .
+
+      - name: Set up reviewdog
+        if: github.event_name == 'pull_request'
+        uses: reviewdog/action-setup@d8a7baabd7f3e8544ee4dbde3ee41d0011c3a93f # v1.5.0
+
+      - name: Lint Markdown (reviewdog)
+        if: github.event_name == 'pull_request'
+        run: |
+          markdownlint_rc=0
+          npx --yes markdownlint-cli2 . > /tmp/markdownlint-report.txt 2>&1 || markdownlint_rc=$?
+          reviewdog_rc=0
+          cat /tmp/markdownlint-report.txt |
+            reviewdog \
+              -efm="%f:%l:%c %m" \
+              -efm="%f:%l %m" \
+              -name=markdownlint \
+              -reporter=github-pr-review \
+              -filter-mode=added \
+              -fail-level=error || reviewdog_rc=$?
+          if [ $markdownlint_rc -ne 0 ] && ! grep -Eq '^[^:]+:[0-9]+(:[0-9]+)? ' /tmp/markdownlint-report.txt; then
+            echo "::error title=markdownlint::markdownlint failed before producing parseable diagnostics"
+            exit $markdownlint_rc
+          fi
+          exit $reviewdog_rc
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   lint-yaml:
     name: Lint YAML
     needs: determine-changes
@@ -127,44 +173,6 @@ jobs:
           reporter: github-pr-review
           fail_level: error
           yamllint_flags: .
-
-  lint-markdown:
-    name: Lint Markdown
-    needs: determine-changes
-    if: ${{ needs.determine-changes.outputs.doc == 'true' || needs.determine-changes.outputs.workflow_ci == 'true' }}
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-
-    steps:
-      - name: Checkout the main repository
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-        with:
-          persist-credentials: false
-
-      - name: Lint Markdown
-        if: github.event_name != 'pull_request'
-        run: npx --yes markdownlint-cli2 .
-
-      - name: Set up reviewdog
-        if: github.event_name == 'pull_request'
-        uses: reviewdog/action-setup@d8a7baabd7f3e8544ee4dbde3ee41d0011c3a93f # v1.5.0
-
-      - name: Lint Markdown (reviewdog)
-        if: github.event_name == 'pull_request'
-        run: |
-          npx --yes markdownlint-cli2 . > /tmp/markdownlint-report.txt 2>&1 || true
-          cat /tmp/markdownlint-report.txt |
-            reviewdog \
-              -efm="%f:%l:%c %m" \
-              -efm="%f:%l %m" \
-              -name=markdownlint \
-              -reporter=github-pr-review \
-              -filter-mode=added \
-              -fail-level=error
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   check-prek:
     name: Check prek
@@ -221,7 +229,9 @@ jobs:
       - name: Lint with Ruff (reviewdog)
         if: github.event_name == 'pull_request'
         run: |
-          uv run ruff check . --output-format=json > /tmp/ruff-report.json || true
+          ruff_rc=0
+          uv run ruff check . --output-format=json > /tmp/ruff-report.json || ruff_rc=$?
+          reviewdog_rc=0
           jq -c '
             .[] |
             {
@@ -239,14 +249,20 @@ jobs:
                 }
               }
             }
-          ' /tmp/ruff-report.json |
+          ' /tmp/ruff-report.json > /tmp/ruff-rdjsonl.txt || true
+          cat /tmp/ruff-rdjsonl.txt |
             reviewdog \
               -f=rdjsonl \
               -name=ruff \
               -reporter=github-pr-review \
               -filter-mode=added \
               -fail-level=error \
-              -tee
+              -tee || reviewdog_rc=$?
+          if [ $ruff_rc -ne 0 ] && [ ! -s /tmp/ruff-rdjsonl.txt ]; then
+            echo "::error title=ruff::ruff failed before producing diagnostics for reviewdog"
+            exit $ruff_rc
+          fi
+          exit $reviewdog_rc
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
