--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,6 +18,38 @@
   ],
   regexManagers: [
     {
+      fileMatch: ["^\\.github/workflows/.*\\.ya?ml$"],
+      matchStrings: [
+        "uses: commitizen-tools/setup-cz@[a-f0-9]{40}[^\\n]*\\n(?:\\s+with:\\n(?:\\s+[^\\n]+\\n)*?)\\s+version: '(?<currentValue>[^'\\s]+)'",
+      ],
+      datasourceTemplate: "pypi",
+      depNameTemplate: "commitizen",
+    },
+    {
+      fileMatch: ["^\\.github/workflows/.*\\.ya?ml$"],
+      matchStrings: [
+        "uses: zizmorcore/zizmor-action@[a-f0-9]{40}[^\\n]*\\n(?:\\s+with:\\n(?:\\s+[^\\n]+\\n)*?)\\s+version: '(?<currentValue>[^'\\s]+)'",
+      ],
+      datasourceTemplate: "github-releases",
+      depNameTemplate: "zizmorcore/zizmor",
+    },
+    {
+      fileMatch: ["^\\.github/workflows/.*\\.ya?ml$"],
+      matchStrings: [
+        "uses: reviewdog/action-setup@[a-f0-9]{40}[^\\n]*\\n(?:\\s+with:\\n(?:\\s+[^\\n]+\\n)*?)\\s+reviewdog_version: '(?<currentValue>[^'\\s]+)'",
+      ],
+      datasourceTemplate: "github-releases",
+      depNameTemplate: "reviewdog/reviewdog",
+    },
+    {
+      fileMatch: ["^\\.github/workflows/.*\\.ya?ml$"],
+      matchStrings: [
+        "uses: j178/prek-action@[a-f0-9]{40}[^\\n]*\\n(?:\\s+with:\\n(?:\\s+[^\\n]+\\n)*?)\\s+prek-version: '(?<currentValue>[^'\\s]+)'",
+      ],
+      datasourceTemplate: "github-releases",
+      depNameTemplate: "j178/prek",
+    },
+    {
       fileMatch: ["^\\.github/workflows/ci\\.ya?ml$"],
       matchStrings: [
         "go install github\\.com/rhysd/actionlint/cmd/actionlint@(?<currentValue>v\\S+)",
