--- a/.github/workflows/manage-pull-requests.yaml
+++ b/.github/workflows/manage-pull-requests.yaml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Set up Commitizen
         uses: commitizen-tools/setup-cz@578def531656e522cd8978e6df62d626593e0a5f # v0.7.0
+        with:
+          version: '4.13.9'
 
       - name: Lint pull request title
         run: cz check --message "$PR_TITLE"
